test/sh/error/func/multi_param_call_missing_comma.sk
external f(a: Int, b: Int)

f(1 2)
